using System.Collections;
using System.Collections.Generic;
using UnityEngine;

internal class AnimatorTags
{
    internal static string isMoving = "isMoving";
    internal static string isJumping = "isJumping";
    internal static string isGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string jump = "jump";
    internal static string isOnWall = "isOnWall";
    internal static string isOnCeiling = "isOnCeiling";
    internal static string isAlive = "isAlive";
}